add filter on equipment-with-event metric (#75)
* first get equipments that match filter and get metrics from these equipments
* refacto + move category in Event entity
